# ckb-dao-portal-v2

./: .gitignore  .gitmodules  CLAUDE.md  package.json
contracts/: Cargo.toml  build.rs
contracts/libs/dao-shared/: Cargo.toml
contracts/libs/dao-shared/src/: cell_collector.rs  error.rs  lib.rs  transaction_context.rs  types.rs  validation.rs
dapp/: netlify.toml  package.json  pnpm-lock.yaml  pre-build.sh  tsconfig.json
dapp/app/: globals.css  layout.tsx  page.tsx
dapp/app/address-binding/: page.tsx
dapp/app/api/binding/complete/: route.ts
dapp/app/api/test-webauthn/: route.ts
dapp/app/apply-representative/: page.tsx
dapp/app/communication/: page.tsx
dapp/app/create-poll/: page.tsx
dapp/app/dao-explorer/: page.tsx
dapp/app/dao-rules/: page.tsx
dapp/app/did-setup/: page.tsx
dapp/app/profile/: page.tsx
dapp/app/proposals/: page.tsx
dapp/app/proposals/[id]/: page.tsx
dapp/app/representatives/: page.tsx
dapp/app/representatives/[id]/: page.tsx
dapp/app/submit-proposal/: page.tsx
dapp/components/: header.tsx  sidebar.tsx
dapp/components/address-binding/: binding-flow.tsx  binding-status.tsx
dapp/components/wallet/: wallet-connect-button.tsx  wallet-provider.tsx
dapp/lib/: webauthn-client.ts
dapp/lib/ckb/: deployment-manager.ts
dapp/lib/types/: dao.ts  index.ts  nostr.ts
dapp/netlify/functions/: binding-authentication-options.ts  binding-registration-options.ts  binding-registration.ts  tsconfig.json
dapp/netlify/functions/libs/: address-binding.ts  cache.ts  utils.ts
docs/: SETUP.md  address-binding-protocol-Workflow.md  architecture.prd.txt  ckb-dao-portal-v2.prd.txt  registration-options.json
schemas/: dao.mol
(+3 files in other folders)
