[package]
name = "dao-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ckb-std.workspace = true
ckb-types.workspace = true
ckb_deterministic.workspace = true
molecule.workspace = true
serde.workspace = true

[features]
default = ["std"]
std = ["ckb-std/std", "ckb-types/std"]